<resources>
    <string name="app_name">BiblioSilencer</string>

    <!-- stringhe relative al menu -->
    <string name="menuSettings">Settings</string>
    <string name="menuLibraries">Libraries</string>
    <string name="menuAbout">About BiblioSilencer</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="permesso">REQUEST</string>

    <string name="slide_1_title">BiblioSilencer</string>
    <string name="slide_1_desc">The easiest way to keep your library quiet!</string>

    <string name="slide_2_title">AUDIO PERMISSIONS</string>
    <string name="slide_2_desc">This will let BiblioSilencer to hear noise all around you!</string>

    <string name="slide_3_title">GPS PERMISSIONS</string>
    <string name="slide_3_desc">And this to find quietest libraries all around your place!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="pref_audio_on">Audio notification</string>
    <string name="pref_audio_on_summary">In case of high noise the application will send an audio notification to the user</string>
    <string name="pref_audio_title">Audio settings</string>
    <string name="biblio_item_desc">Library</string>
    <string name="menuHome">Home</string>
    <string name="search_description">Press the search button on the top right corner\n to search for libraries nearby you</string>
    <string name="stats_description">Press the search button on the top right corner\n to load noise statistics about libraries you visited so far</string>
    <string name="loading_libraries">Loading libraries...</string>
    <string name="menuStats">Stats</string>
    <string name="current">CURRENT</string>
    <string name="min_value">MIN.VALUE</string>
    <string name="max_value">MAX.VALUE</string>
    <string name="btn_start">START</string>
    <string name="btn_stop">STOP</string>
    <string name="attivazione_del_microfono">Activating microphone...</string>
    <string name="developed_by">Developed by Domenico Minici</string>
    <string name="zero_value">0.00 dB</string>

</resources>
