<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ToolBarStyle"
            android:textColor= "@color/bianco">

            <ImageButton
                android:id="@+id/btnPosition"
                android:background="@null"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_update"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_gravity="end"/>

        </android.support.v7.widget.Toolbar>

        <!-- Layout relativo alla posizione -->
        <RelativeLayout
            android:layout_weight=".7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight">

            <ImageView
                android:id="@+id/positionGps"
                android:src="@drawable/ic_gps"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/biblioGps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@id/positionGps" />

        </RelativeLayout>

        <!-- Layout relativo alla registrazione -->
        <RelativeLayout
            android:layout_weight=".3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/imageMic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_microphone"/>

            <ProgressBar
                android:id="@+id/progressBarMain"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:background = "@xml/progress" />

            <TextView
                android:id="@+id/progressBarTextMain"
                android:textColor="@color/bianco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/attivazione_del_microfono"
                android:layout_alignBottom="@id/progressBarMain"
                android:layout_below="@id/progressBarMain" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/table"
                android:layout_below="@id/imageMic">

                <TableRow
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/current"
                        android:textColor="@color/bianco"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif"
                        android:layout_column="1"
                        android:layout_weight="0.33"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/min_value"
                        android:textColor="@color/verde"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif"
                        android:layout_column="2"
                        android:layout_weight="0.33"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/max_value"
                        android:textColor="@color/rosso"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif"
                        android:layout_column="3"
                        android:layout_weight="0.33"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp" />
                </TableRow>

                <TableRow
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/decibel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=""
                        android:textColor="@color/bianco"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif"
                        android:layout_column="1"
                        android:layout_weight="0.33"/>

                    <TextView
                        android:id="@+id/decibelmin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/verde"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif"
                        android:layout_column="2"
                        android:layout_weight="0.33"/>

                    <TextView
                        android:id="@+id/decibelmax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/rosso"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif"
                        android:layout_column="3"
                        android:layout_weight="0.33"/>
                </TableRow>

                <TableRow
                    android:layout_height="20dp">

                </TableRow>

                <TableRow
                    android:layout_height="20dp">

                </TableRow>

                <TableRow>
                    <Button
                        android:id="@+id/btnStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_start"
                        android:layout_column="1"
                        android:layout_weight="0.33"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"/>

                    <Button
                        android:id="@+id/btnStop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_stop"
                        android:layout_column="3"
                        android:layout_weight="0.33"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="40dp"/>
                </TableRow>

            </TableLayout>

        </RelativeLayout>



    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_top"
        app:menu="@menu/menu_main"/>


</android.support.v4.widget.DrawerLayout>